# 3DRenderer

./: .gitattributes  Cargo.toml  README.md  Readme.md  android_build.sh  assets
Android/: gradle.properties
Android/app/: build.gradle.kts
Android/app/src/main/java/name/jinleili/bevy/: MainActivity.kt
Android/app/src/main/java/name/renderer/bevy/: BevySurfaceView.kt  MainActivity.kt  RustBridge.kt  Settings.kt  Toolbox.kt  color_picker.kt  curve.kt  edit.kt  polygon.kt  polyline.kt  shape.kt  text.kt  transform.kt  view.kt
Android/app/src/main/java/name/renderer/bevy/ui/theme/: Color.kt  Shape.kt  Theme.kt
src/: export.rs  file_io.rs  geometry.rs  lib.rs  main.rs  scene3d.rs  stepping.rs
src/ffi/: android.rs
